--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,9 @@
 }
 
 /* Header */
-
+.icons-mobile {
+  display: none;
+}
 .logo {
   width: 100px;
   height: 100px;
@@ -80,6 +82,23 @@ a {
 
 @media screen and (max-width: 730px) {
 
+.icons-mobile {
+ display: flex ;
+ margin-top: 30px;
+ margin-left: -90px;
+}
+
+.icons-mobile a {
+font-size: 35px;
+margin-left: 0;
+margin-right: 20px;
+
+}
+.icons-mobile a:hover {
+  color: darkorange;
+}
+
+
   header {
       margin-top: -2px;
   }
@@ -94,13 +113,15 @@ a {
       z-index: 1000;
       width: 100%;
   }
-  .nav-list{
+  .nav-list {
       z-index: 1000;
       background: #fff;
-      width: 100vh;
+      width: 100%;
       font-size: 20px;
       position: fixed;
       z-index: 1000;
+      margin-left: -350px;
+      display: block;
   }
 
   li {
@@ -137,23 +158,25 @@ a {
       cursor: pointer;
       background: #000000;
       border-radius: 5px;
+      padding-top: 2px;
+      height: 40px;
   }
   .nav-list-open {
       display: flex;
       flex-direction: column;
-      text-align: left;
+      text-align: start;
       padding-bottom: 1rem;
       margin-left: 200px;
       width: 100%;
-      height: 400px;
+      height: 350px;
       background: rgb(255, 255, 255);
-      margin-top: 400px;
+      margin-top: 300px;
   }
 
   .nav-list-open .nav-item {
       display: block;
       padding-top: 1.2rem;
-      margin-top: 20px;
+      margin-top: 15px;
   }
 
   .nav-list-open {
@@ -538,30 +561,35 @@ a {
   min-height: 80%;
   margin-top: -20px;
 }
+.img4 {
+  width: 120px;
+  height: 230px;
+  margin-left: 10%;
+  margin-top: 40px;
+  margin-bottom: 5px;
+}
+
 .projeto-btn {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
 }
 .projeto button {
-  width: 200px;
+  width: 85%;
   height: 40px;
   margin-top: 0px;
-  border-radius: 5px;
+  border-radius: 3px;
   border: 1px solid;
   font-family: Poppins;
   font-weight: 600;
   font-size: 15px;
-  background: #fff;
-  justify-content: center;
-  align-items: center;
-  margin-left: 50px;
+  background: darkorange;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.76);
+  margin-left: 10%;
 }
 .projeto button:hover {
-  background: #000000;
-  color: #fff;
-  text-shadow: 0 0 8px ;
+  background: rgb(111, 0, 255);
+  color: #000000;
   box-shadow: none;
 }
 .proj-h1 {
@@ -576,7 +604,6 @@ a {
   margin-top: 10px;
   margin-bottom: 80px;
 }
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
 
 .explore-projetos {
     background: linear-gradient(135deg, #ffffff, #ffffff); /* Fundo degradê inverso */
@@ -847,7 +874,7 @@ a {
   font-weight: 600;
 }
 .footer-pt4 a:hover {
-  text-shadow: 0 0 15px;
+  color: darkorange;
 }
 .pt4-contatos {
   display: flex;
@@ -861,21 +888,20 @@ a {
 .fico {
   width: 40px;
   height: 40px;
-  background: black;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 20px;
+  margin-right: 30px;
   margin-top: 10px;
 }
 .ico2 {
   font-size: 20px;
-  color: #fff;
+  color: #000000;
+  width: 100%;
+  height: 100%;
 }
 .ico2:hover {
-  filter: drop-shadow(0 0 8px darkorange);
   color: darkorange;
+  background: #fff;
+  width: 100%;
+  height: 100%;
 }
 .dark-footer {
   background-color: #fff;
@@ -1145,8 +1171,6 @@ li {
 .nav-bar {
     top: 0px;
 }
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
-
 .sobre-nos {
     background: linear-gradient(135deg, #ffffff, #ffffff); /* Fundo degradê preto */
     padding: 20px 30px; /* Espaçamento interno */
@@ -1166,7 +1190,7 @@ li {
 
 @keyframes rotate {
     0% {
-        transform: rotate(180deg);
+        transform: rotate(0deg);
     }
     100% {
         transform: rotate(360eg);
