--- a/src/App.css
+++ b/src/App.css
@@ -129,11 +129,13 @@ margin-right: 20px;
     margin-left: -20px;
   }
 
-  .logo {
-      margin-bottom: 5px;
-      margin-left: -230px;
-      margin-top: -20px;
-  }
+.logo {
+  display: flex;
+  margin-bottom: 5px;
+  margin-left: -230px;
+  margin-top: -20px;
+
+}
 
   .nav-bar {
       padding: 0.5rem 4rem;
