--- a/src/App.css
+++ b/src/App.css
@@ -1309,10 +1309,18 @@ li {
 .card1 {
     width: 600px;
     height: 200px;
-    border: 1px solid black;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5); /* Sombra mais profunda */
+    border-radius: 5px;
     display: flex;
     margin-right: 30px;
+    transition: transform 0.5s; /* Transição suave aplicada ao estado normal */
+    
 }
+.card1:hover, .card2:hover, .card3:hover, .card4:hover {
+  transform: scale(1.03);
+  transition: transform 0.5s;
+}
+
 
 .card1 img {
     width: 200px;
@@ -1334,8 +1342,10 @@ li {
 .card2 {
     width: 600px;
     height: 200px;
-    border: 1px solid black;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5); /* Sombra mais profunda */
+    border-radius: 5px;
     display: flex;
+    transition: transform 0.5s; /* Transição suave aplicada ao estado normal */
 }
 
 .card2 img {
@@ -1358,10 +1368,12 @@ li {
 .card3 {
     width: 600px;
     height: 200px;
-    border: 1px solid black;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5); /* Sombra mais profunda */
+    border-radius: 5px;
     display: flex;
     margin-left: 40px;
     margin-right: 30px;
+    transition: transform 0.5s; /* Transição suave aplicada ao estado normal */
 }
 
 .card3 img {
@@ -1384,9 +1396,11 @@ li {
 .card4 {
     width: 600px;
     height: 200px;
-    border: 1px solid black;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5); /* Sombra mais profunda */
+    border-radius: 5px;
     display: flex;
     margin-right: 40px;
+    transition: transform 0.5s; /* Transição suave aplicada ao estado normal */
 }
 
 .card4 img {
@@ -1465,6 +1479,7 @@ li {
     display: flex;
     flex-direction: column;
     border: none;
+    box-shadow: none;
 }
 
 .card1 img {
@@ -1481,6 +1496,7 @@ li {
     display: flex;
     flex-direction: column;
     border: none;
+    box-shadow: none;
 }
 
 .card2 img {
@@ -1511,6 +1527,7 @@ li {
     display: flex;
     flex-direction: column;
     border: none;
+    box-shadow: none;
 }
 
 .card3 img {
@@ -1534,6 +1551,7 @@ li {
     display: flex;
     flex-direction: column;
     border: none;
+    box-shadow: none;
 }
 
 .card4 img {
