--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,11 @@
 .nav-bar {
   height: 60px;
   margin-top: -10px;
-  border-bottom: 1px solid #dfdfdf;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 8px rgba(46, 46, 46, 0.2);
+  background: #000000;
+}
+.nav-bar a {
+  color: #fff;
 }
 .nav-list {
   margin-top: 0px;
@@ -65,7 +68,6 @@ a {
   font-family: Poppins;
   font-size: 17px;
 }
-
 .mobile-menu-icon {
   display: none;
   position: fixed;
@@ -123,7 +125,9 @@ margin-right: 20px;
       margin-left: -350px;
       display: block;
   }
-
+.nav-item a {
+  color: #fff;
+}
   li {
     background: #fff;
     margin-left: -20px;
@@ -162,6 +166,7 @@ margin-right: 20px;
       border-radius: 5px;
       padding-top: 2px;
       height: 40px;
+      box-shadow: 0 0px 8px rgba(51, 51, 51, 0.37); /* Sombra mais profunda */
   }
   .nav-list-open {
       display: flex;
@@ -169,10 +174,11 @@ margin-right: 20px;
       text-align: start;
       padding-bottom: 1rem;
       margin-left: 200px;
-      width: 100%;
+      width: 120%;
       height: 350px;
-      background: rgb(255, 255, 255);
+      background: black;
       margin-top: 300px;
+      margin-left: 200px;
   }
 
   .nav-list-open .nav-item {
@@ -185,11 +191,9 @@ margin-right: 20px;
       display: block;
       padding: 1rem 2rem;
   }
-
   .mobile-menu button {
       width: 100%;
   }
-
   .nav-list-closed {
       display: none;
   }
@@ -219,7 +223,16 @@ margin-right: 20px;
     margin-bottom: 20px;
     font-family: Poppins;
 }
-
+.hero img {
+  margin-top: -80px;
+  margin-left: -400px;
+  width: 1200px;
+}
+.container-h1 {
+ min-width: 800px;
+ margin-left: -300px;
+ margin-top: 0px;
+}
 .container-h1 h1 {
     font-size: 90px;
     margin-top: 100px;
@@ -507,7 +520,6 @@ a {
   font-weight: 600;
   font-size: 50px;
   margin-left: 50px;
-
 }
 
 .projetos-container {
@@ -587,17 +599,17 @@ a {
   height: 40px;
   margin-top: 0px;
   border-radius: 3px;
-  border: 1px solid black;
   font-family: Poppins;
+  border: none;
   font-weight: 600;
   font-size: 15px;
   background: darkorange;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.76);
   margin-left: 10%;
+  color: #fff;
 }
 .projeto button:hover {
   background: rgb(111, 0, 255);
-  color: #000000;
 }
 .proj-h1 {
   font-size: 30px;
@@ -815,13 +827,13 @@ a {
 
 .footer {
   height: 250px;
-  border-top: 1px solid #dfdfdf;
   display: flex;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-  /* background: #628c8f; */
+  background: #000000;
+  color: #fff;
 }
-.container-footer {
-  display: flex;
+.footer a {
+  color: #fff;
 }
 .footer-pt1 {
   margin-left: 30px;
@@ -830,6 +842,8 @@ a {
   width: 250px;
   font-size: 15px;
   margin-left: 20px;
+  margin-top: 20px;
+  font-weight: 600;
 }
 .footer-pt1 img {
   width: 120px;
@@ -852,6 +866,7 @@ a {
 .flinks a {
   list-style-type: none;
   font-size: 15px;
+  color: rgb(255, 255, 255);
 }
 
 .nav-item a:hover {
@@ -905,8 +920,8 @@ a {
   margin-right: 10px;
 }
 .fico {
-  width: 40px;
-  height: 40px;
+  width: 25px;
+  height: 25px;
   margin-right: 30px;
   margin-top: 10px;
 }
@@ -923,12 +938,11 @@ a {
   height: 100%;
 }
 .dark-footer {
-  background-color: #fff;
+  background-color: #000000;
   color: #9c9c9c;
   height: 40px;
   text-align: center;    
-  margin-top: 0px;
-  border-top: 1px solid #dfdfdf;
+  margin-top: -15px;
 }  
 .copyright {
   font-size: 14px;
@@ -968,53 +982,58 @@ li {
 
   /* Hero */
 
-  .hero {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 0;
-    padding-top: 80px;
-    height: 600px;
-  }
-  .container-h1 {
-    margin-bottom: 0px;
-    margin-top: -250px;
-  }
-  .container-h1 h1 {
-    margin-bottom: 0px;
-    font-size: 42px;
-  }
-  .container-h1 h2 {
-    font-size: 21px;
-    margin-top: 0px;
-  }
-  .container-h1 p {
-    padding: 0;
-    margin: 10px;
-    font-size: 12px;
-  }
-  .obj img {
-   width: 400%;
-   margin-left: -15%;
-  }
-  .objchild {
-    margin-left: 160px;
-  }
-  .main__action {
-    margin-left: 150px;
-    margin-top: 150px;
-  }
-  .contador {
-    width: 400px;
-    font-size: 20px;
-    margin-left: 60px;
-    margin-top: 0px;
-    padding-top: 150px;
-    margin-bottom: 0;
-    padding-bottom: 0;
-  }
-
-  /* ====== Sobre ======*/
+.hero {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 0;
+  padding-top: 80px;
+  height: 600px;
+  overflow: hidden;
+}
+.hero img {
+  margin-top: -450px;
+  width: 700px;
+}
+.container-h1 {
+  margin-bottom: 0px;
+  margin-top: -600px;
+  margin-left: -230px;
+}
+.container-h1 h1 {
+  margin-bottom: 0px;
+  font-size: 42px;
+}
+.container-h1 h2 {
+  font-size: 21px;
+  margin-top: 0px;
+}
+.container-h1 p {
+  padding: 0;
+  margin: 10px;
+  font-size: 12px;
+}
+.obj img {
+ width: 400%;
+ margin-left: -15%;
+}
+.objchild {
+  margin-left: 160px;
+}
+.main__action {
+  margin-left: 150px;
+  margin-top: 150px;
+}
+.contador {
+  width: 400px;
+  font-size: 20px;
+  margin-left: 60px;
+  margin-top: 0px;
+  padding-top: 150px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+/* ====== Sobre ======*/
 
 
 .title-sh {
@@ -1107,7 +1126,7 @@ li {
 
 /* ===== Footer ===== */
 .footer {
-  height: 650px;
+  height: 520px;
 }
 .container-footer {
   display: flex;
@@ -1139,14 +1158,14 @@ li {
 }
 .footer-pt3 {
   margin-left: -210px;
-  margin-top: 142px;
+  margin-top: 85px;
 }
 .footer-pt3 h2 {
   width: 150px;
 }
 .footer-pt4 {
   margin-left: -300px;
-  margin-top: 420px;
+  margin-top: 330px;
 }
 .pt4-contatos h1 {
   font-size: 22px;
